[gd_scene load_steps=18 format=3 uid="uid://cmwlmls20al4n"]

[ext_resource type="AudioStream" uid="uid://dln6ib4t050s7" path="res://sfx/crunch_short#1.wav" id="1_3sunq"]
[ext_resource type="Script" path="res://menu/lobby.gd" id="1_5w1wc"]
[ext_resource type="AudioStream" uid="uid://c6gdoo4rj0u5d" path="res://sfx/crunch_short#2.wav" id="2_gmh25"]
[ext_resource type="PackedScene" uid="uid://cr32uawgvgfw3" path="res://library/decklist.tscn" id="3_46hag"]
[ext_resource type="FontFile" uid="uid://dpq6fp6gls8cw" path="res://ui/Marksman.ttf" id="3_froxj"]
[ext_resource type="PackedScene" uid="uid://byd1ebrm0dlya" path="res://library/library.tscn" id="4_uj40u"]
[ext_resource type="Texture2D" uid="uid://2xdkmxx21ax1" path="res://library/library_button.png" id="5_bnfs7"]
[ext_resource type="Script" path="res://menu/library_button.gd" id="6_8qpwc"]
[ext_resource type="Shader" path="res://tv.gdshader" id="7_jy3ei"]
[ext_resource type="Texture2D" uid="uid://phfrv0iph8x0" path="res://library/frame_x2.png" id="9_atloy"]
[ext_resource type="Texture2D" uid="uid://bvk0ohc7fd3me" path="res://menu/goobert.png" id="10_1ae1f"]

[sub_resource type="LabelSettings" id="LabelSettings_vxnvp"]
font = ExtResource("3_froxj")
font_size = 96
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1f2kv"]
font = ExtResource("3_froxj")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_q3wap"]
font = ExtResource("3_froxj")
font_size = 32
font_color = Color(0.00784314, 0.0392157, 0.0666667, 1)

[sub_resource type="LabelSettings" id="LabelSettings_085mo"]
font = ExtResource("3_froxj")
font_size = 32
font_color = Color(0.00784314, 0.0392157, 0.0666667, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p6cwo"]
font = ExtResource("3_froxj")
font_size = 48
font_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jcxdk"]
shader = ExtResource("7_jy3ei")

[node name="lobby" type="Node2D"]
texture_filter = 1
script = ExtResource("1_5w1wc")

[node name="sfx" type="Node" parent="."]

[node name="ok" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("1_3sunq")

[node name="back" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("2_gmh25")

[node name="bg" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 480.0
color = Color(0.843137, 0.886275, 0.639216, 1)

[node name="title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 125.0
offset_top = 12.0
offset_right = 515.0
offset_bottom = 88.0
grow_horizontal = 2
text = "Inscryption"
label_settings = SubResource("LabelSettings_vxnvp")
horizontal_alignment = 1

[node name="subtitle" type="Label" parent="title"]
layout_mode = 0
offset_left = 28.0
offset_top = 8.0
offset_right = 236.0
offset_bottom = 34.0
text = "Goobert's"
label_settings = SubResource("LabelSettings_1f2kv")

[node name="player_list" type="NinePatchRect" parent="."]
offset_left = 53.0
offset_top = 136.0
offset_right = 355.0
offset_bottom = 384.0
texture = ExtResource("9_atloy")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="players" type="VBoxContainer" parent="player_list"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 302.0
offset_bottom = 242.0

[node name="1" type="Label" parent="player_list/players"]
layout_mode = 2
text = "Banana Bread (In Game)"
label_settings = SubResource("LabelSettings_q3wap")
text_overrun_behavior = 1

[node name="selected" type="ColorRect" parent="player_list/players/1"]
show_behind_parent = true
layout_mode = 0
offset_right = 298.0
offset_bottom = 30.0

[node name="border" type="ColorRect" parent="player_list/players/1"]
show_behind_parent = true
layout_mode = 0
offset_top = 28.0
offset_right = 298.0
offset_bottom = 30.0
color = Color(0.00784314, 0.0392157, 0.0666667, 1)

[node name="2" type="Label" parent="player_list/players"]
layout_mode = 2
text = "Banana Bread (In Game)"
label_settings = SubResource("LabelSettings_q3wap")
text_overrun_behavior = 1

[node name="selected" type="ColorRect" parent="player_list/players/2"]
show_behind_parent = true
layout_mode = 0
offset_right = 298.0
offset_bottom = 30.0

[node name="border" type="ColorRect" parent="player_list/players/2"]
show_behind_parent = true
layout_mode = 0
offset_top = 28.0
offset_right = 298.0
offset_bottom = 30.0
color = Color(0.00784314, 0.0392157, 0.0666667, 1)

[node name="3" type="Label" parent="player_list/players"]
layout_mode = 2
text = "Banana Bread (In Game)"
label_settings = SubResource("LabelSettings_q3wap")
text_overrun_behavior = 1

[node name="selected" type="ColorRect" parent="player_list/players/3"]
show_behind_parent = true
layout_mode = 0
offset_right = 298.0
offset_bottom = 30.0

[node name="border" type="ColorRect" parent="player_list/players/3"]
show_behind_parent = true
layout_mode = 0
offset_top = 28.0
offset_right = 298.0
offset_bottom = 30.0
color = Color(0.00784314, 0.0392157, 0.0666667, 1)

[node name="4" type="Label" parent="player_list/players"]
layout_mode = 2
text = "Banana Bread (In Game)"
label_settings = SubResource("LabelSettings_q3wap")
text_overrun_behavior = 1

[node name="selected" type="ColorRect" parent="player_list/players/4"]
show_behind_parent = true
layout_mode = 0
offset_right = 298.0
offset_bottom = 30.0

[node name="border" type="ColorRect" parent="player_list/players/4"]
show_behind_parent = true
layout_mode = 0
offset_top = 28.0
offset_right = 298.0
offset_bottom = 30.0
color = Color(0.00784314, 0.0392157, 0.0666667, 1)

[node name="5" type="Label" parent="player_list/players"]
layout_mode = 2
text = "Banana Bread (In Game)"
label_settings = SubResource("LabelSettings_q3wap")
text_overrun_behavior = 1

[node name="selected" type="ColorRect" parent="player_list/players/5"]
show_behind_parent = true
layout_mode = 0
offset_right = 298.0
offset_bottom = 30.0

[node name="border" type="ColorRect" parent="player_list/players/5"]
show_behind_parent = true
layout_mode = 0
offset_top = 28.0
offset_right = 298.0
offset_bottom = 30.0
color = Color(0.00784314, 0.0392157, 0.0666667, 1)

[node name="6" type="Label" parent="player_list/players"]
layout_mode = 2
text = "Banana Bread (In Game)"
label_settings = SubResource("LabelSettings_q3wap")
text_overrun_behavior = 1

[node name="selected" type="ColorRect" parent="player_list/players/6"]
show_behind_parent = true
layout_mode = 0
offset_right = 298.0
offset_bottom = 30.0

[node name="border" type="ColorRect" parent="player_list/players/6"]
show_behind_parent = true
layout_mode = 0
offset_top = 28.0
offset_right = 298.0
offset_bottom = 30.0
color = Color(0.00784314, 0.0392157, 0.0666667, 1)

[node name="7" type="Label" parent="player_list/players"]
layout_mode = 2
text = "Banana Bread (In Game)"
label_settings = SubResource("LabelSettings_q3wap")
text_overrun_behavior = 1

[node name="selected" type="ColorRect" parent="player_list/players/7"]
show_behind_parent = true
layout_mode = 0
offset_right = 298.0
offset_bottom = 30.0

[node name="border" type="ColorRect" parent="player_list/players/7"]
show_behind_parent = true
layout_mode = 0
offset_top = 28.0
offset_right = 298.0
offset_bottom = 30.0
color = Color(0.00784314, 0.0392157, 0.0666667, 1)

[node name="8" type="Label" parent="player_list/players"]
layout_mode = 2
text = "Banana Bread (In Game)"
label_settings = SubResource("LabelSettings_q3wap")
text_overrun_behavior = 1

[node name="selected" type="ColorRect" parent="player_list/players/8"]
show_behind_parent = true
layout_mode = 0
offset_right = 298.0
offset_bottom = 30.0

[node name="border" type="ColorRect" parent="player_list/players/8"]
show_behind_parent = true
layout_mode = 0
offset_top = 28.0
offset_right = 298.0
offset_bottom = 30.0
color = Color(0.00784314, 0.0392157, 0.0666667, 1)

[node name="status" type="Label" parent="."]
offset_left = 54.0
offset_top = 98.0
offset_right = 438.0
offset_bottom = 136.0
text = "That player is already in a game."
label_settings = SubResource("LabelSettings_085mo")

[node name="hide_timer" type="Timer" parent="status"]
one_shot = true

[node name="back_button" type="Button" parent="."]
offset_left = 54.0
offset_top = 411.0
offset_right = 149.0
offset_bottom = 457.0
theme_override_colors/font_color = Color(0.00784314, 0.0392157, 0.0666667, 1)
theme_override_colors/font_focus_color = Color(0.00784314, 0.0392157, 0.0666667, 1)
theme_override_fonts/font = ExtResource("3_froxj")
theme_override_font_sizes/font_size = 48
text = "BACK"

[node name="challenge_button" type="Button" parent="."]
offset_left = 165.0
offset_top = 411.0
offset_right = 365.0
offset_bottom = 457.0
theme_override_colors/font_color = Color(0.00784314, 0.0392157, 0.0666667, 1)
theme_override_colors/font_focus_color = Color(0.00784314, 0.0392157, 0.0666667, 1)
theme_override_fonts/font = ExtResource("3_froxj")
theme_override_font_sizes/font_size = 48
text = "CHALLENGE"

[node name="challenge_buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 40.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 60.0

[node name="no_button" type="Button" parent="challenge_buttons"]
layout_mode = 0
offset_left = 359.0
offset_top = 284.0
offset_right = 454.0
offset_bottom = 330.0
theme_override_colors/font_color = Color(0.00784314, 0.0392157, 0.0666667, 1)
theme_override_colors/font_focus_color = Color(0.00784314, 0.0392157, 0.0666667, 1)
theme_override_fonts/font = ExtResource("3_froxj")
theme_override_font_sizes/font_size = 48
text = "NO"

[node name="yes_button" type="Button" parent="challenge_buttons"]
layout_mode = 0
offset_left = 470.0
offset_top = 284.0
offset_right = 565.0
offset_bottom = 330.0
theme_override_colors/font_color = Color(0.00784314, 0.0392157, 0.0666667, 1)
theme_override_colors/font_focus_color = Color(0.00784314, 0.0392157, 0.0666667, 1)
theme_override_fonts/font = ExtResource("3_froxj")
theme_override_font_sizes/font_size = 48
text = "YES"

[node name="status" type="Label" parent="challenge_buttons"]
layout_mode = 0
offset_left = 327.0
offset_top = 151.0
offset_right = 597.0
offset_bottom = 271.0
text = "That player is already in a game."
label_settings = SubResource("LabelSettings_p6cwo")
horizontal_alignment = 1
autowrap_mode = 2
text_overrun_behavior = 1

[node name="decklist" parent="." instance=ExtResource("3_46hag")]
visible = false

[node name="library" parent="." instance=ExtResource("4_uj40u")]
visible = false

[node name="library_button" type="Sprite2D" parent="."]
position = Vector2(605, 50)
scale = Vector2(2, 2)
texture = ExtResource("5_bnfs7")
hframes = 5
script = ExtResource("6_8qpwc")

[node name="tv_filter" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_jcxdk")
offset_left = 1.0
offset_top = 8.0
offset_right = 641.0
offset_bottom = 488.0
mouse_filter = 2
color = Color(0, 0, 0, 0.101961)

[node name="goobert" type="Sprite2D" parent="."]
position = Vector2(453, 28)
scale = Vector2(2, 2)
texture = ExtResource("10_1ae1f")
flip_h = true
region_enabled = true
region_rect = Rect2(0, 0, 19, 20)
